wins and losses

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 	<title>Crystal Collector</title>
 	<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 	<link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
+
+	<!-- Here we added a link to the jQuery library -->
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<!-- Here we added a link to our external javasript file game.js -->
 	<script type="text/javascript" src="./assets/javascript/game.js"></script>
 	
 </head>
