crystal with fixed value

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 	<!-- ============================================== -->
 	 <div id = "crystalsection"><!-- opening tag for crystalsection -->
 
-	 <img class="crystal-image" id ="crystal-image-1" src="./assets/images/3e9ba010b98d4abd04d03ff3d836710f--white-quartz-crystal-white-crystals.jpg" alt="crystals">
-	 <img class="crystal-image" id ="crystal-image-2" src="./assets/images/503920686.jpg" alt="crystals">
-	 <img class="crystal-image" id ="crystal-image-3" src="./assets/images/Bi-crystal-white-background.jpg" alt="crystals">
-	 <img class="crystal-image" id ="crystal-image-4" src="./assets/images/511669667.jpg" alt="crystals">
+	 <img crystalValue = "2" class="crystal-image" id ="crystal-image-1" src="./assets/images/crystal-image-1.jpg" alt="crystals">
+	 <img crystalValue = "4" class="crystal-image" id ="crystal-image-2" src="./assets/images/crystal-image-2.jpg" alt="crystals">
+	 <img crystalValue = "8" class="crystal-image" id ="crystal-image-3" src="./assets/images/crystal-image-3.jpg" alt="crystals">
+	 <img crystalValue = "12" class="crystal-image" id ="crystal-image-4" src="./assets/images/crystal-image-4.jpg" alt="crystals">
 
 	 </div> <!-- closing tag for crystalsection -->
 	<!-- ============================================== -->
